fixed typo in sensor name

--- a/Kincody_valve.yaml
+++ b/Kincody_valve.yaml
@@ -54,7 +54,7 @@ binary_sensor:
       - delayed_on_off: 100ms
 
   - platform: gpio
-    name: "vavle-upstairs-open"
+    name: "valve-upstairs-open"
     pin:
       number: GPIO39
       inverted: true
