--- a/D1mini_opentherm.yaml
+++ b/D1mini_opentherm.yaml
@@ -188,6 +188,10 @@ climate:
       kp: 0.6
       ki: 0.005
       kd: 1.5
+    visual:
+      min_temperature: 10
+      max_temperature: 25
+      temperature_step: 0.5
 
 # -----------------------------------------------------------------------------
 # OUTPUT INTERCEPTION (The Logic Layer)
