--- a/Kincody_valve.yaml
+++ b/Kincody_valve.yaml
@@ -47,6 +47,7 @@ switch:
 binary_sensor:
   - platform: gpio
     name: "valve-downstairs-open"
+    device_class: opening
     pin:
       number: GPIO36
       inverted: true
@@ -55,6 +56,7 @@ binary_sensor:
 
   - platform: gpio
     name: "valve-upstairs-open"
+    device_class: opening
     pin:
       number: GPIO39
       inverted: true
