modified esp32_ble_trackers parameters in an attempt to fix the issue I saw on 27th Jan see here https://docs.google.com/document/d/1NhuYjHF0-GkxwTWKa2Dz-s9KS01kgXmpMyircT7QTg8/edit?tab=t.w2ypsbxjolff

--- a/D1mini_opentherm.yaml
+++ b/D1mini_opentherm.yaml
@@ -88,8 +88,10 @@ switch:
 # -----------------------------------------------------------------------------
 esp32_ble_tracker:
   scan_parameters:
-    interval: 300ms
-    window: 200ms
+    interval: 320ms
+    window: 30ms
+    active: false
+    continuous: true
 
 sensor:
   # ---------------------------------------------------------------------------
